--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@
    
   } */
   
-    .header{
+      /* .header{
     border-bottom: 1px solid #ECECEC;
    }
   
@@ -184,9 +184,9 @@
               line-height: 1.17;
               letter-spacing: 0.03em;
      
-      }
+      }  
    
-   
+    */
   
   
    /* PORTFOLIO */
