--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -3,9 +3,7 @@
   display: flex;
   }
 
-// .socials-item:not(:last-child){                   
-//  margin-right: 10px;
-// }
+
 .socials-link{
  color:#AFB1B8;
   width: 100%;
@@ -18,7 +16,7 @@
   &:hover,
   &:focus{
     background-color: var(--accent-color);
-    color:white;
+    color: var(--primary-white-color);
    }
 
 }
