--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,18 @@
 @import './components/backdrop';
 @import './components/modal';
 @import './components/socials';
-// @import './layout/header';
+@import './layout/header';
+@import './layout/hero';
+@import './layout/portfolio';
+@import './layout/feature';
+@import './layout/works';
+@import './layout/team';
+@import './layout/perfomanse';
+@import './layout/footer';
+
+
+
+
+
+
+
