--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,11 +1,8 @@
 body{
-   
-  background-color:#FFFFFF;
-  color:var(--title-text-color);
+  background-color: var(--primary-white-color);
+  color: var(--title-text-color);
   font-family: Roboto, sans-serif;
-  
 }
-
 a{
   text-decoration: none; 
 }
