--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 
    .modal{
     position: absolute;
-     background-color: var( --primary-white-color) ;
+     background-color: var(--primary-white-color);
      width: 528px;
      min-height: 581px;
    
@@ -37,7 +37,7 @@
    }
    .modal-icon:hover,
    .modal-icon:focus{
-     fill: #2196F3;
+     fill: var(--accent-color);
    }
    .backdrop.is-hidden{
    opacity: 0;
@@ -81,24 +81,18 @@
      outline: none; 
    }    
     .modal-title{
-     font-size: 20px;
-     font-weight: 700;
-     line-height: 1.15;
-     letter-spacing: 0.03em;
+     @include font(20px, 1.15, 700);
      text-align: center;
-     color: var(--title-text-color) ;
+     color: var(--title-text-color);
      margin-bottom: 12px;
      display: block;
      }
    
    .form-button{
-   font-size: 16px;
-   font-weight: 700;
-   line-height: 30px;
-   letter-spacing: 0.06em;
+   @include font(16px, 1.14, 700, 0.06em);
    text-align: center;
    background-color: #188CE8;
-   color: var(--primary-white-color);
+   color: var(--primary-white-);
    width: 200px;
    height: 50px;
    margin-left: 149px;
@@ -107,11 +101,8 @@
    }
    
    .modal-form-label{
+    @include font(12px, 1.16, 400, 0.01em);
     display: block;
-   font-size: 12px;
-   font-weight: 400;
-   line-height: 1.16;
-   letter-spacing: 0.01em;
    text-align: left;
    margin-bottom: 4px;
    margin-bottom: 4px;
@@ -120,29 +111,23 @@
    }
    
    .form-comment{
-     width: 448px;
+    @include font(400, 0.01em);
+    width: 448px;
      height: 138px;
      padding: 16px 12px;
      margin-left: 55px;
      border-radius:4px;
      border: 1px solid var(--title-text-color);
      resize: none;
-   font-size: 14px;
-   font-weight: 400;
-   line-height: 1.14;
-   letter-spacing: 0.01em;
-   text-align: left;
-   color: var(--secondary-color);
+     text-align: left;
+     color: var(--secondary-color);
    
    }
    .comment-label{
-   margin-top: 10px;
-   margin-bottom: 4px; 
-   font-size: 12px;
-   font-weight: 400;
-   line-height: 14px;
-   letter-spacing: 0.01em;
-   text-align: left;
+  @include font(12px, 1.16, 400, 0.01em);
+    margin-top: 10px;
+    margin-bottom: 4px; 
+    text-align: left;
    
    }
    .modal-form-icon{
@@ -164,19 +149,16 @@
    
    }
    .modal-coment{
-   display: block;
-   width: 100%;
+  @include font(12px, 1.16, 400, 0.01em);
+    display: block;
+    width: 100%;
     height: 120px; 
-   padding:12px 16px;
+    padding:12px 16px;
     border-radius:4px;
     border: 1px solid rgba(33,33,33,0.2);
     resize: none;
     color: var(--secondary-color);
-    font-size: 12px;
-   font-weight: 400;
-   line-height: 1.16;
-   letter-spacing: 0.01em;
-   text-align: left;
+    text-align: left;
    }
    
    .modal-coment:focus + .modal-form-label,
@@ -184,14 +166,11 @@
      transform:translateY(-50px);
    }
      .check-label{
-    display: flex;
+    @include font(1.7, 400);
+   display: flex;
    justify-content: center;
    align-items:center;
-   font-size: 14px;
-   font-style: normal;
-   font-weight: 400;
-   line-height: 1.7;
-   letter-spacing: 0.03em;
+  
    text-align: left;
    color: var(--secondary-color);
    padding-top: 20px;
@@ -205,8 +184,8 @@
      height: 15px;
      margin-right: 7px;
      border-radius: 2px;
-    border:2px solid  var(--secondary-color); 
-    color: var(--title-text-color);
+    border:2px solid var(--secondary-color); 
+    color:$title-text-color;
     background-repeat:no-repeat;
     background-size:contain;
     background-position:center;
@@ -219,7 +198,7 @@
     
    }
    .label-item{
-   color: var(--accent-color);
+   color: var(accent-color);
    
    
    } 
