--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -5,42 +5,39 @@
   display: flex;
   justify-content: center;
   align-items:center;
-  margin-bottom: 30px;
-  width:270px ;
+  margin-bottom:30px;
+  width:270px;
   height: 110px;
   background-color: #f4f5f4;
-   border-radius: 4px;
+   border-radius:4px;
 }
 
-.feature-feature__item:not(:last-child){
-  margin-right: 30px; 
+.feature-item:not(:last-child){
+  margin-right:30px; 
    
  }
 
 
 .visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
+  width:1px;
+  height:1px;
+  margin:-1px;
+  padding:0;
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
 }
   
-.feature-feature__title{
-  color: var(title-text-color);
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
+.feature-title{
+ @include font(700);
+  color:var(--title-text-color);
   text-transform: uppercase;
   margin-bottom: 10px;
   }
 
 .feature-text{
-  color: var(--secondary-color);
+  color:var(--secondary-color);
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
