--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer{ 
-  background-color: #2F303A;
+  background-color: --first-color;
   padding-top: 60px;
   padding-bottom: 60px;  
   }
@@ -14,14 +14,10 @@
 }
 
 .footer-logo{
+  @include font(26px, 1.19, 700);
   display: block;
   margin-bottom: 20px;  
-  font-family: Raleway,sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
+  color:$accent-color;
 }
 
 .footer-logo-link{
@@ -29,44 +25,33 @@
   color: var(--primary-white-color);
 }
 .footer-link-adress{
+  @include font(1.7, 400,);
   color: var(--primary-white-color); 
-  font-size: 14px;
-  line-height: 1.17; 
   font-style: normal; 
-  transition:color 250ms var(--timing-function);
+  transition:color 250ms $timing-function;
 }
 
 
 .footer-item { 
 .link{
+@include font(1.7, 400);
   color: rgba(255, 255, 255, 0.6); 
-  font-size: 14px;
-  line-height: 1.17; 
-  font-style: normal;  
+ font-style: normal;  
 }
 }
 .footer-item:not(:last-child){
   margin-bottom: 9px;
 }
 
-// .footer-link:hover,
-// .footer-link:focus{
-//   color: var(--accent-color);
-// }  
-
-
-  
-    
-
 .footer-link-adress:hover,
 .footer-link-adress:focus{
-  color: var(--accent-color);
+  color:$accent-color;
 }    
 .footer-link{
-  transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-);
    &:hover,
    &:focus{
-   color: var(--accent-color);
+   color:$accent-color;
 }  
 }
  
@@ -77,14 +62,11 @@
 
 }
 .social-caption{
+  @include font(1.14, 700);
   text-transform:uppercase; 
   margin-bottom: 20px;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-align: left;
-  color: var(--primary-white-color);
+  color: var(--primary-white-);
 
 } 
 
@@ -105,35 +87,28 @@
     background-color: var(--accent-color);
    }
 }
-// .social-link:hover,
-// .social-link:focus{
-//   background-color: var(--accent-color);
-//  }
+
 .social-icon{
-   fill: #FFFFFF;
+   fill: var(--primary-white-color);
  }
 
 /* FOOTER-FORM */
 .footer-form{
-/* margin-bottom: 20px; */
 margin-left: 93px;
 }  
 
 
 .footer-deck input{
+  @include font(16px, 1.25, 400);
   display: inline-block;
   width: 358px;
   height: 50px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
   text-align: left;
   border-radius: 4px;
   box-sizing: border-box;
   margin-right: 12px;
   border: 1px solid rgba(255,255,255,0.3);
-  background-color: #2F303A;
+  background-color: var(--first-color);
   padding: 15px;
   outline: none;
 
@@ -141,25 +116,19 @@ margin-left: 93px;
 
 
 .footer-form-title{
+  @include font(700);
   margin-bottom: 20px;
   display: block;
-  font-size: 14px;
   text-transform: uppercase;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-align: left;
   color: var(--primary-white-color);
   border: none;
 }
  .button-footer{
- display: inline-flex;
+  @include font(16px, 1.85, 700, 0.03em);
+  display: inline-flex;
   justify-content: center;
- align-items:center;
- font-size: 16px;
-  font-weight: 700;
-  line-height: 1.85;
-  letter-spacing: 0.06em;
+  align-items:center;
   text-align: center;
   height: 50px;
   width: 200px;
@@ -169,15 +138,15 @@ margin-left: 93px;
   border: 0;
 }
 .button-icon{
-  fill: var(--primary-white-color);
+  fill: var(--primary-white-);
   padding:0 auto;
   margin-left: 10px;
 }
 
 
 .footer-imput:not(:placeholder-shown):required:valid{
-  color: var(--primary-white-color);
+  color:$primary-white-color;
 }
 .footer-imput:not(:placeholder-shown):required:invalid{
-  background-color: #2F303A;
+  background-color: var(--first-color);
 }
