--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,127 +1,108 @@
 .header{
-    border-bottom: 1px solid #ECECEC;
-     } 
+  border-bottom: 1px solid #ECECEC;
+   } 
+  
+.main-header{
+    display: flex;
+    align-items: center;
+  }
+.header-logo{
+  @include font(26px,700,1.19);
+  color:$accent-color;
+  font-family: Raleway, sans-serif;
+  margin-right: 93px;
+  
+  }
     
-  .main-header{
-      display: flex;
-      align-items: center;
-    }
-  .header-logo{
-    @include font(26px,700,1.19);
-    color: var(--accent-color);
-    font-family: Raleway, sans-serif;
-    margin-right: 93px;
-    
-    }
-      
-  .header-logo-link{
-    color: var(--title-text-color) 
-            
-        }
-  .header-items{ 
-    display: flex;
-    align-items:center;
-        }
-  .header-list{ 
-    display:flex; 
-  
-      } 
-           
-  .current::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--accent-color);
-  
+.header-logo-link{
+  color: var(--title-text-color); 
+          
   }
-  .header-item {
-    @include font(1.17);
-    &:not(:last-child){
-    margin-right: 50px;
-       }   
+.header-items{ 
+  display: flex;
+  align-items:center;
   }
-  
-  .header-link {
-   @include font( 0.02em); 
-    position: relative;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    color: var(--title-text-color);
-    transition:color 250ms var(--timing-function);
-      &:hover,
-      &:focus{
-      color: var(--accent-color);
-    }
-              }
-  .current{
-    color: var(--accent-color);
-    }
-       
-        //         .header-link:hover,
-        //         .header-link:focus{  
-        //          color: var(--accent-color);
-        // }
-  
-  // .main-header{
-  //   display: flex;
-  //   align-items: center;
-  // }
-  
-      /* .contacs{  */
-  .contacs {
-    margin-left: auto; 
-    display: flex;
-        }
-  .header-contacs{
-    display: flex;
-    align-items:center;
-      &:not(:last-child){
-      margin-right:30px;
-          }
-            }     
-  
-  .mail-link{
-  @include font( 0.02em); 
-   display: flex;
-    align-items:center;
-    color: var(--secondary-color);
-    padding-top: 32px;
-    padding-bottom: 32px;
-    transition:color 250ms var(--timing-function);
-  }
-  .header-contacs {
-  .link:hover,
-  .link:focus{
-    color: var( --accent-color);
-  }
-        
-        }
-        
-  .contacs {
-    margin-left: auto; 
-    display: flex;
-  }
-  // .header-contacs{
-  //   display: flex;
-  //   align-items:center;
-  //     &:not(:last-child){
-  //     margin-right:30px;
-  //   }
-  //     }
-     
-      // .header-contacs:not(:last-child){
-      // margin-right:30px;
-      // }
-  .mail-icon{
-    margin-right: 10px;
-    fill: currentColor;
-  }
-  .phone-icon{
-    margin-right: 10px;
-    fill: currentColor;
+.header-list{ 
+  display:flex; 
+
   } 
-  
+         
+.current::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+
+}
+.header-item {
+  @include font(1.17);
+  &:not(:last-child){
+  margin-right: 50px;
+  }   
+}
+
+.header-link {
+ @include font( 0.02em); 
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color:$title-text-color;
+  transition:color 250ms var(--timing-function);
+    &:hover,
+    &:focus{
+    color: var(--accent-color);
+  }
+ }
+.current{
+  color: var(--accent-color);
+  }
+     
+     
+    /* .contacs{  */
+.contacs {
+  margin-left: auto; 
+  display: flex;
+  }
+.header-contacs{
+  display: flex;
+  align-items:center;
+    &:not(:last-child){
+    margin-right:30px;
+  }
+    }     
+
+.mail-link{
+@include font( 0.02em); 
+ display: flex;
+  align-items:center;
+  color: var(--secondary-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition:color 250ms var(--timing-);
+}
+.header-contacs {
+.link:hover,
+.link:focus{
+  color: var(--accent-color);
+}
+      
+  }
+      
+.contacs {
+  margin-left: auto; 
+  display: flex;
+}
+
+.mail-icon{
+  margin-right: 10px;
+  fill: currentColor;
+}
+.phone-icon{
+  margin-right: 10px;
+  fill: currentColor;
+} 
+
