--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -9,14 +9,14 @@
    
 .team-items{ 
   display: flex;
-  margin-left: -30px; 
+  margin-left:-30px; 
    }
 .team-items> .team-img{ 
   flex-basis: calc(100% /4 -30px); 
   margin-left:30px; 
   border-bottom-left-radius: 4px; 
   border-bottom-right-radius: 4px;
-  background-color: #FFFFFF;
+  background-color: var(--primary-white-color);
    }  
 
 .present-team{
@@ -35,6 +35,6 @@
   align-items:center;
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: white;
+  background-color: var(--primary-white-);
   text-align: center;
 }
