--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 :root {
+  /* --primary-text-color:rgba 0,0,0,0.8; */
   --title-text-color:#212121;
   --accent-color: #2196F3;
   --secondary-color: #757575;
@@ -45,6 +46,7 @@ img {
 }
 
 .section {
+  /* padding-top: 0; */
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -357,7 +359,7 @@ img {
   margin-left: 70px;
 }
 
-.socials-title {
+.socials-caption {
   text-transform: uppercase;
   margin-bottom: 20px;
   font-size: 14px;
