--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 :root {
-  /* --primary-text-color:rgba 0,0,0,0.8; */
   --title-text-color:#212121;
   --accent-color: #2196F3;
   --secondary-color: #757575;
+  --first-color: #2F303A;
   --primary-white-color:#FFFFFF;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 body {
-  background-color: #FFFFFF;
+  background-color: var(--primary-white-color);
   color: var(--title-text-color);
   font-family: Roboto, sans-serif;
 }
@@ -46,7 +46,6 @@ img {
 }
 
 .section {
-  /* padding-top: 0; */
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -186,7 +185,7 @@ img {
   margin-bottom: 50px;
   justify-content: center;
   display: flex;
-  color: var(title-text-color);
+  color: var(--title-text-color);
 }
 
 .filter-item:not(:last-child) {
@@ -292,7 +291,7 @@ img {
 
 /*FOOTER   */
 .footer {
-  background-color: #2F303A;
+  background-color: var(--first-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -391,12 +390,11 @@ img {
 }
 
 .social-icon {
-  fill: #FFFFFF;
+  fill: var(--primary-white-color);
 }
 
 /* FOOTER-FORM */
 .footer-form {
-  /* margin-bottom: 20px; */
   margin-left: 93px;
 }
 
@@ -413,7 +411,7 @@ img {
   box-sizing: border-box;
   margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: #2F303A;
+  background-color: var(--first-color);
   padding: 15px;
   outline: none;
 }
@@ -459,12 +457,12 @@ img {
 }
 
 .footer-imput:not(:placeholder-shown):required:invalid {
-  background-color: #2F303A;
+  background-color: var(--first-color);
 }
 
 /* HERO */
 .section-hero {
-  background-color: #2F303A;
+  background-color: var(--first-color);
   padding-top: 200px;
   padding-bottom: 200px;
   background-image: linear-gradient(rgba(47, 48, 50, 0.4), rgba(47, 48, 50, 0.4)), url(../images/team/hero-team.jpg);
@@ -548,7 +546,7 @@ img {
 }
 
 .feature-title {
-  color: var(title-text-color);
+  color: var(--title-text-color);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -636,7 +634,7 @@ img {
   margin-left: 30px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: #FFFFFF;
+  background-color: var(--primary-white-color);
 }
 
 .present-team {
@@ -790,7 +788,7 @@ img {
 
 .modal-icon:hover,
 .modal-icon:focus {
-  fill: #2196F3;
+  fill: var(--accent-color);
 }
 
 .backdrop.is-hidden {
@@ -809,7 +807,6 @@ img {
 
 .modal-form-field {
   margin-bottom: 12px;
-  /* margin-top: 20px; */
 }
 
 .modal-check-field {
