--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
 
  :root{
-    /* --primary-text-color:rgba 0,0,0,0.8; */
+
     --title-text-color:#212121;
     --accent-color: #2196F3;
     --secondary-color: #757575;
-    
+    --first-color: #2F303A;
     --primary-white-color:#FFFFFF;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
   
@@ -13,8 +13,8 @@
   
   body{
    
-    background-color:#FFFFFF;
-    color:var(--title-text-color);
+    background-color: var(--primary-white-color);
+    color: var(--title-text-color);
     font-family: Roboto, sans-serif;
     
   }
@@ -48,7 +48,7 @@
       }
   
   .section{
-      /* padding-top: 0; */
+   
       padding-top: 94px;
       padding-bottom: 94px;
      
@@ -188,7 +188,7 @@
        margin-bottom: 50px;
        justify-content: center; 
         display: flex;
-        color:var(title-text-color); 
+        color: var(--title-text-color); 
       }
      
          .filter-item:not(:last-child){
@@ -296,7 +296,7 @@
         /*FOOTER   */
         
         .footer{ 
-            background-color: #2F303A;
+            background-color: var(--first-color);
             padding-top: 60px;
             padding-bottom: 60px;  
           }
@@ -394,7 +394,7 @@
           background-color: var(--accent-color);
          }
          .social-icon{
-           fill: #FFFFFF;
+           fill: var(--primary-white-color);
          }
       
       /* FOOTER-FORM */
@@ -417,7 +417,7 @@
           box-sizing: border-box;
           margin-right: 12px;
           border: 1px solid rgba(255,255,255,0.3);
-          background-color: #2F303A;
+          background-color: var(--first-color);
           padding: 15px;
           outline: none;
   
@@ -463,13 +463,13 @@
           color: var(--primary-white-color);
         }
         .footer-imput:not(:placeholder-shown):required:invalid{
-          background-color: #2F303A;
+          background-color: var(--first-color);
         }
   
          /* HERO */
        
          .section-hero{
-        background-color:#2F303A ;
+        background-color: var(--first-color);
         padding-top: 200px; 
         padding-bottom: 200px;
         background-image:linear-gradient(rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4)) 
@@ -554,7 +554,7 @@
      }
         
       .feature-title{
-       color: var(title-text-color);
+       color: var(--title-text-color);
         font-size: 14px;
         font-weight: 700;
         line-height: 1.14;
@@ -638,7 +638,7 @@
             margin-left:30px; 
             border-bottom-left-radius: 4px; 
             border-bottom-right-radius: 4px;
-             background-color: #FFFFFF;
+             background-color: var(--primary-white-color);
            }  
   
           .present-team{
@@ -756,7 +756,7 @@
   }
   .modal{
    position: absolute;
-    background-color: var( --primary-white-color) ;
+    background-color: var(--primary-white-color) ;
     width: 528px;
     min-height: 581px;
   
@@ -792,7 +792,7 @@
   }
   .modal-icon:hover,
   .modal-icon:focus{
-    fill: #2196F3;
+    fill: var(--accent-color);
   }
   .backdrop.is-hidden{
   opacity: 0;
@@ -808,7 +808,7 @@
   }
    .modal-form-field{
    margin-bottom: 12px;
-   /* margin-top: 20px; */
+   
   
   }
   
@@ -846,7 +846,7 @@
     line-height: 1.15;
     letter-spacing: 0.03em;
     text-align: center;
-    color: var(--title-text-color) ;
+    color: var(--title-text-color);
     margin-bottom: 12px;
     display: block;
     }
