--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,12 +1,12 @@
-.root{
-    
+
+  :root{
+
     --title-text-color:#212121;
-      --accent-color: #2196F3;
-      --secondary-color: #757575;
+    --accent-color: #2196F3;
+    --secondary-color: #757575;
+    --first-color: #2F303A;
+    --primary-white-color:#FFFFFF;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
   
-      --first-color: #2F303A;
-      --primary-white-color: #FFFFFF;
-      --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
-    
-    }
+  }
   
