--- a/sass/layout/_perfomans.scss
+++ b/sass/layout/_perfomans.scss
@@ -3,34 +3,39 @@
   
 }
 .perfomance-title{
-
-margin-bottom: 50px;
-font-size: 36px;
-font-weight: 700;
-line-height: 1.36;
-letter-spacing: 0.03em;
-text-align: center;
+@include font($fz:36px, $lh:1.36, $fw:700,);
+  margin-bottom: 50px;
+  // font-size: 36px;
+  // font-weight: 700;
+  // line-height: 1.36;
+  // letter-spacing: 0.03em;
+  text-align: center;
 }
-.perfomance-list:not(:first-child){
+.perfomance-items-perfomance__list:not(:first-child){
   margin-left: 30px;
   border-radius:4px;
  }
- .perfomance-link{
+.perfomance-items-perfomance__link{
  display: flex;
-width: 170px;
-height: 92px;
-align-items:center;
-justify-content: center;
-border-radius:4px;
-color: #AFB1B8;
- border:1px solid #AFB1B8;
- transition:border-color 250ms var(--timing-function),color 250ms var(--timing-function);
+  width: 170px;
+  height: 92px;
+  align-items:center;
+  justify-content: center;
+  border-radius:4px;
+  color: #AFB1B8;
+  border:1px solid #AFB1B8;
+  transition:border-color 250ms var(--timing-function),color 250ms var(--timing-function);
+  &:hover,
+  &:focus{
+   border-color: var(--accent-color);
+   color:var(--accent-color);
 }
-.perfomance-link:hover,
-.perfomance-link:focus{
-  border-color: var(--accent-color);
-  color:var(--accent-color);
 }
+// .perfomance-link:hover,
+// .perfomance-link:focus{
+//   border-color: var(--accent-color);
+//   color:var(--accent-color);
+// }
 
 .perfomance-icon{
   fill: currentColor;
