--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 body {
   background-color: var(--primary-white-color);
   color: var(--title-text-color);
@@ -45,17 +58,19 @@ img {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+@keyframes share {
+  0% {
+    transform: translate(10px);
+  }
+  25% {
+    transform: translate(-20px);
+  }
+  75% {
+    transform: translate(10px);
+  }
+  0% {
+    transform: translate(0px);
+  }
 }
 
 .socials-list {
@@ -79,12 +94,12 @@ img {
   color: var(--primary-white-color);
 }
 
-.socials-item {
+.team-socials-socials__item {
   width: 44px;
   height: 44px;
 }
 
-.socials-item:not(:last-child) {
+.team-socials-socials__item:not(:last-child) {
   margin-right: 10px;
 }
 
@@ -157,15 +172,15 @@ img {
   padding: 35px;
 }
 
-.modal-form-field {
+.modal-form-modal__form-field {
   margin-bottom: 12px;
 }
 
-.modal-check-field {
+.modal-form-modal__check-field {
   margin-bottom: 30px;
 }
 
-.modal-comments-field {
+.modal-form-modal__comments-field {
   margin-bottom: 20px;
 }
 
@@ -189,7 +204,7 @@ img {
   transform: translateY(-50px);
 }
 
-.modal-title {
+.modal-form-modal__title {
   font-size: 20px;
   line-height: 1.15;
   font-weight: 700;
@@ -321,6 +336,11 @@ img {
   transition: background 250ms var(--timing-function);
 }
 
+.check-label .checkbox:checked + .check-label::before {
+  background: var(--accent-color);
+  background-image: url("../images/check.svg");
+}
+
 .checkbox:checked + .check-label::before {
   background: var(--accent-color);
   background-image: url("../images/check.svg");
@@ -335,13 +355,13 @@ img {
 }
 
 .header-logo {
-  display: flex;
+  font-size: 26px;
+  line-height: 1.19;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  display: block;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   margin-right: 93px;
 }
 
@@ -359,6 +379,19 @@ img {
   text-align: left;
 }
 
+.header-list__item {
+  font-size: 14px;
+  line-height: 1.17;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  display: flex;
+  align-items: center;
+}
+
+.header-list__item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .current::after {
   content: '';
   position: absolute;
@@ -370,24 +403,23 @@ img {
   background-color: var(--accent-color);
 }
 
-.header-link {
+.header-list__link {
+  font-size: 14px;
+  line-height: 0.02em;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color 250ms var(--timing-function);
 }
 
-.current {
+.header-list__link:hover, .header-list__link:focus {
   color: var(--accent-color);
 }
 
-.header-link:hover,
-.header-link:focus {
+.current {
   color: var(--accent-color);
 }
 
@@ -396,22 +428,20 @@ img {
   align-items: center;
 }
 
-/* .contacs{  */
-.mail-link {
+.contacs-mail__link {
+  font-size: 14px;
+  line-height: 0.02em;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   display: flex;
   align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--secondary-color);
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms var(--timing-function);
 }
 
-.header-contacs .link:hover,
-.header-contacs .link:focus {
+.contacs-mail__link:hover, .contacs-mail__link:focus {
   color: var(--accent-color);
 }
 
@@ -420,12 +450,12 @@ img {
   display: flex;
 }
 
-.header-contacs {
+.contacs-header__contacs {
   display: flex;
   align-items: center;
 }
 
-.header-contacs:not(:last-child) {
+.contacs-header__contacs:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -439,19 +469,6 @@ img {
   fill: currentColor;
 }
 
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-item {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-}
-
 .section-hero {
   background-color: var(--first-color);
   padding-top: 200px;
@@ -462,10 +479,10 @@ img {
   background-size: cover;
 }
 
-.hero-title {
+.container-hero__title {
   font-size: 44px;
-  font-weight: 900;
   line-height: 1.36;
+  font-weight: 900;
   letter-spacing: 0.06em;
   text-align: center;
   color: var(--primary-white-color);
@@ -473,22 +490,17 @@ img {
   margin-bottom: 30px;
 }
 
-.hero-button:hover,
-.hero-button:focus {
-  background-color: var(--accent-color);
-}
-
-.hero-button {
+.container-hero__button {
   display: block;
   cursor: pointer;
+  font-size: 16px;
+  line-height: 1.85;
+  font-weight: 700;
+  letter-spacing: 0.06em;
   width: 200px;
   height: 50px;
   border-radius: 4px;
   border: transparent;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.85;
-  letter-spacing: 0.06em;
   text-align: center;
   background-color: #188CE8;
   color: var(--primary-white-color);
@@ -497,11 +509,15 @@ img {
   transition: backgroud-color 250ms var(--timing-function);
 }
 
+.container-hero__button:hover, .container-hero__button:focus {
+  background-color: var(--accent-color);
+}
+
 .feature {
   display: flex;
 }
 
-.feature-pic {
+.feature-feature__pic {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -512,16 +528,8 @@ img {
   border-radius: 4px;
 }
 
-.feature-item:not(:last-child) {
+.feature-feature__item:not(:last-child) {
   margin-right: 30px;
-}
-
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
 }
 
 .visually-hidden {
@@ -535,21 +543,22 @@ img {
   clip: rect(0 0 0 0);
 }
 
-.feature-title {
-  color: var(--title-text-color);
+.feature-feature__title {
   font-size: 14px;
-  font-weight: 700;
   line-height: 1.14;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  color: var(--title-text-color);
   text-transform: uppercase;
   margin-bottom: 10px;
 }
 
-.feature-text {
-  color: var(--secondary-color);
+.feature-feature__text {
   font-size: 14px;
   line-height: 1.7;
+  font-weight: 500;
   letter-spacing: 0.03em;
+  color: var(--secondary-color);
 }
 
 .works-section {
@@ -557,16 +566,20 @@ img {
 }
 
 .works-title {
-  margin-bottom: 50px;
   font-size: 36px;
-  font-weight: 700;
   line-height: 1.16;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
   text-align: center;
   color: var(--title-text-color);
 }
 
-.works-head {
+.works-list-works__head {
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 700;
+  letter-spacing: 0.03em;
   width: 100%;
   height: 70px;
   position: absolute;
@@ -574,16 +587,12 @@ img {
   align-items: center;
   justify-content: center;
   bottom: 0;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-align: center;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--primary-white-color);
 }
 
-.works-deck {
+.works-list-works__deck {
   position: relative;
 }
 
@@ -591,11 +600,11 @@ img {
   display: flex;
 }
 
-.works-item {
+.works-list-works__item {
   width: 370px;
 }
 
-.works-item:not(:last-child) {
+.works-list-works__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -604,11 +613,11 @@ img {
 }
 
 .team-title {
-  margin-bottom: 50px;
   font-size: 36px;
-  font-weight: 700;
   line-height: 1.16;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -617,7 +626,7 @@ img {
   margin-left: -30px;
 }
 
-.team-items > .team-img {
+.team-items > .team-items-team__img {
   flex-basis: calc(100% /4 -30px);
   margin-left: 30px;
   border-bottom-left-radius: 4px;
@@ -625,25 +634,25 @@ img {
   background-color: var(--primary-white-color);
 }
 
-.present-team {
+.team-items-present__team {
   font-size: 16px;
-  font-weight: 500;
   line-height: 1.18;
+  font-weight: 500;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 
-.team-text {
+.team-items-team__text {
   font-size: 16px;
+  line-height: 1.12;
   font-weight: 400;
-  line-height: 19px;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
   margin-top: 10px;
   margin-bottom: 16px;
 }
 
-.card-thumb {
+.team-items-card__thumb {
   align-items: center;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -656,20 +665,20 @@ img {
 }
 
 .perfomance-title {
-  margin-bottom: 50px;
   font-size: 36px;
-  font-weight: 700;
   line-height: 1.36;
+  font-weight: 700;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
   text-align: center;
 }
 
-.perfomance-list:not(:first-child) {
+.perfomance-items-perfomance__list:not(:first-child) {
   margin-left: 30px;
   border-radius: 4px;
 }
 
-.perfomance-link {
+.perfomance-items-perfomance__link {
   display: flex;
   width: 170px;
   height: 92px;
@@ -681,8 +690,7 @@ img {
   transition: border-color 250ms var(--timing-function), color 250ms var(--timing-function);
 }
 
-.perfomance-link:hover,
-.perfomance-link:focus {
+.perfomance-items-perfomance__link:hover, .perfomance-items-perfomance__link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
@@ -707,13 +715,13 @@ img {
 }
 
 .footer-logo {
+  font-size: 26px;
+  line-height: 1.19;
+  font-weight: 700;
+  letter-spacing: 0.03em;
   display: block;
   margin-bottom: 20px;
   font-family: Raleway,sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
@@ -721,37 +729,37 @@ img {
   color: var(--primary-white-color);
 }
 
-.footer-link-adress {
-  color: var(--primary-white-color);
+.footer-list-footer__link-adress {
   font-size: 14px;
-  line-height: 1.17;
+  line-height: 1.7;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
   font-style: normal;
   transition: color 250ms var(--timing-function);
 }
 
-.footer-item .link {
+.footer-list-footer__link-adress:hover, .footer-list-footer__link-adress:focus {
+  color: var(--accent-color);
+}
+
+.footer-list-footer__item .link {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.17;
   font-style: normal;
 }
 
-.footer-item:not(:last-child) {
+.footer-list-footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-link:hover,
-.footer-link:focus {
-  color: var(--accent-color);
-}
-
-.footer-link-adress:hover,
-.footer-link-adress:focus {
-  color: var(--accent-color);
-}
-
-.footer-link {
+.footer-list-footer__link {
   transition: color 250ms var(--timing-function);
+}
+
+.footer-list-footer__link:hover, .footer-list-footer__link:focus {
+  color: var(--accent-color);
 }
 
 .socials-footer {
@@ -759,21 +767,21 @@ img {
 }
 
 .socials-caption {
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   text-align: left;
   color: var(--primary-white-color);
 }
 
-.social-item:not(:last-child) {
+.footer-socials-social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-link {
+.footer-socials-social__link {
   width: 44px;
   height: 44px;
   display: flex;
@@ -784,13 +792,12 @@ img {
   transition: background-color 250ms var(--timing-function);
 }
 
-.social-link:hover,
-.social-link:focus {
+.footer-socials-social__link:hover, .footer-socials-social__link:focus {
   background-color: var(--accent-color);
 }
 
 .social-icon {
-  fill: #FFFFFF;
+  fill: var(--primary-white-color);
 }
 
 .footer-form {
@@ -798,13 +805,13 @@ img {
 }
 
 .footer-deck input {
+  font-size: 16px;
+  line-height: 1.25;
+  font-weight: 400;
+  letter-spacing: 0.03em;
   display: inline-block;
   width: 358px;
   height: 50px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
   text-align: left;
   border-radius: 4px;
   box-sizing: border-box;
@@ -815,7 +822,7 @@ img {
   outline: none;
 }
 
-.footer-form-title {
+.footer-deck-footer__form-title {
   margin-bottom: 20px;
   display: block;
   font-size: 14px;
@@ -828,14 +835,14 @@ img {
   border: none;
 }
 
-.button-footer {
+.footer-deck-button__footer {
+  font-size: 16px;
+  line-height: 1.85;
+  font-weight: 700;
+  letter-spacing: 0.06em;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.85;
-  letter-spacing: 0.06em;
   text-align: center;
   height: 50px;
   width: 200px;
@@ -871,20 +878,19 @@ img {
 }
 
 .filter-button {
+  font-size: 16px;
+  line-height: 1.62;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   border: transparent;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
   min-width: 73px;
   padding: 6px 22px 6px 22px;
   border-radius: 4px;
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter-button:hover, .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -909,20 +915,20 @@ img {
   text-decoration: none;
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio-link:hover, .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px #00000029;
 }
 
 .portfolio-desc {
+  font-size: 18px;
+  line-height: 1.55;
+  font-weight: 400;
+  letter-spacing: 0.03em;
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   padding: 63px 24px;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
   justify-content: center;
   color: var(--primary-white-color);
   background-color: rgba(33, 159, 243, 0.9);
@@ -947,19 +953,20 @@ img {
 }
 
 .portfolio-title {
-  color: var(--title-text-color);
-  font-weight: 700;
   font-size: 18px;
-  line-height: 2.0;
-  letter-spacing: 0.06;
+  line-height: 2;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
 }
 
 .portfolio-text {
-  margin-top: 4px;
-  color: var(--secondary-color);
   font-size: 16px;
   line-height: 1.87;
+  font-weight: 400;
   letter-spacing: 0.03em;
+  margin-top: 4px;
+  color: var(--secondary-color);
 }
 
 /* CARDS         */
