--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -1,7 +1,7 @@
 .feature{
   display: flex;
 }
-.feature-pic{
+.feature-feature__pic{
 display: flex;
 justify-content: center;
 align-items:center;
@@ -9,21 +9,15 @@ margin-bottom: 30px;
 width:270px ;
 height: 110px;
 background-color: #f4f5f4;
- border-radius: 4px;
+border-radius: 4px;
 }
 
-.feature-item:not(:last-child){
+.feature-feature__item:not(:last-child){
    margin-right: 30px; 
  
 }
 
-.visually-hidden {
-position: absolute;
-clip: rect(0 0 0 0);
-width: 1px;
-height: 1px;
-margin: -1px;
-}
+
 .visually-hidden {
 
 position: absolute;
@@ -36,19 +30,23 @@ border: 0;
 clip: rect(0 0 0 0);
 }
 
-.feature-title{
+.feature-feature__title{
+@include font($fw:700);
 color: var(--title-text-color);
-font-size: 14px;
-font-weight: 700;
-line-height: 1.14;
-letter-spacing: 0.03em;
+// font-size: 14px;
+// font-weight: 700;
+// line-height: 1.14;
+// letter-spacing: 0.03em;
 text-transform: uppercase;
 margin-bottom: 10px;
 }
 
-.feature-text{
-color: var(--secondary-color);
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
+.feature-feature__text{
+@include font($lh:1.7);
+  color: var(--secondary-color);
+// font-size: 14px;
+// font-weight: 400;
+// line-height: 1.7;
+// letter-spacing: 0.03em;
  }
+
