--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,11 +8,12 @@
   background-position: center;
   background-size: cover;
  }
-   .hero-title{
-  font-size: 44px;
-  font-weight: 900;
-  line-height:1.36;
-  letter-spacing: 0.06em;
+   .container-hero__title{
+  @include font($fz:44px, $lh:1.36, $fw:900, $ls:0.06em);
+  //   font-size: 44px;
+  // font-weight: 900;
+  // line-height:1.36;
+  // letter-spacing: 0.06em;
   text-align: center;
   color: var(--primary-white-color);
   text-transform: uppercase;
@@ -20,26 +21,30 @@
    
   }
 
- .hero-button:hover,   
- .hero-button:focus{
-  background-color: var(--accent-color);
- }
- .hero-button{
+//  .hero-button:hover,   
+//  .hero-button:focus{
+//   background-color: var(--accent-color);
+//  }
+ .container-hero__button{
   display: block;
-
-  cursor: pointer;
+   cursor: pointer;
+  @include font($fz:16px, $lh:1.85, $fw:700, $ls:0.06em);
   width: 200px;
   height: 50px;
   border-radius:4px;
   border:transparent;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.85;
-  letter-spacing: 0.06em;
+  // font-size: 16px;
+  // font-weight: 700;
+  // line-height: 1.85;
+  // letter-spacing: 0.06em;
   text-align: center;
   background-color:#188CE8;
   color: var(--primary-white-color);
   margin-left: auto;
   margin-right: auto;
   transition: backgroud-color 250ms var(--timing-function);
+   &:hover,   
+   &:focus{
+  background-color: var(--accent-color);
+ }
   }
