--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,20 +1,21 @@
 .section-team{
   background-color: #F5F4FA;
   }
-    .team-title{ 
-     margin-bottom: 50px;
-      font-size: 36px;
-      font-weight: 700;
-      line-height: 1.16;
-      letter-spacing: 0.03em;
-      text-align: center; 
+.team-title{ 
+  @include font($fz:36px, $lh:1.16, $fw:700);
+  margin-bottom: 50px;
+  // font-size: 36px;
+  // font-weight: 700;
+  // line-height: 1.16;
+  // letter-spacing: 0.03em;
+  text-align: center; 
 } 
  
 .team-items{ 
 display: flex;
 margin-left: -30px; 
  }
-  .team-items> .team-img{ 
+.team-items> .team-items-team__img{ 
   flex-basis: calc(100% /4 -30px); 
   margin-left:30px; 
   border-bottom-left-radius: 4px; 
@@ -22,30 +23,32 @@ margin-left: -30px;
    background-color: var(--primary-white-color);
  }  
 
-.present-team{
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
+.team-items-present__team{
+  @include font($fz:16px, $lh:1.18, $fw:500);
+  // font-size: 16px;
+  // font-weight: 500;
+  // line-height: 1.18;
+  // letter-spacing: 0.03em;
   color: var(--title-text-color); 
  
 }
 
-.team-text{
-font-size: 16px;
-font-weight: 400;
-line-height: 19px;
-letter-spacing: 0.03em;
-color: var(--secondary-color);  
-margin-top: 10px;
-margin-bottom: 16px;
+.team-items-team__text{
+  @include font($fz:16px, $lh:1.12,$fw:400);
+// font-size: 16px;
+// font-weight: 400;
+// line-height: 1.12;
+// letter-spacing: 0.03em;
+  color: var(--secondary-color);  
+  margin-top: 10px;
+  margin-bottom: 16px;
 }
-.card-thumb{
-align-items:center;
-padding-top: 30px;
-padding-bottom: 30px;
-background-color: white;
-text-align: center;
+.team-items-card__thumb{
+  align-items:center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: white;
+  text-align: center;
 }
   
   
