--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -2,43 +2,46 @@
   padding-top: 0;
 }
 .works-title{
-
-margin-bottom: 50px; 
-font-size: 36px;    
-font-weight: 700;
-line-height: 1.16;
-letter-spacing: 0.03em;
-text-align: center; 
-color: var(--title-text-color);   
+ @include font($fz:36px, $lh:1.16, $fw:700);
+  margin-bottom: 50px; 
+  // font-size: 36px;    
+  // font-weight: 700;
+  // line-height: 1.16;
+  // letter-spacing: 0.03em;
+  text-align: center; 
+  color: var(--title-text-color);   
 }
-.works-head{
-width: 100%;
-height: 70px;
-position: absolute;
-display: flex;
-align-items: center;
-justify-content: center;
-bottom: 0;
-font-size: 14px;
-font-weight: 700;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-align: center;
-
-background-color: rgba(47,48,58,0.8); 
-color: var(--primary-white-color);
+.works-list-works__head{
+  @include font($lh:1.14, $fw:700);
+  width: 100%;
+  height: 70px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  // font-size: 14px;
+  // font-weight: 700;
+  // line-height: 1.14;
+  // letter-spacing: 0.03em;
+  text-align: center;
+  background-color: rgba(47,48,58,0.8); 
+  color: var(--primary-white-color);
 }
-.works-deck{
-position: relative;
+.works-list-works__deck{
+  position: relative;
 }
 
 .works-list{
-display: flex;
+  display: flex;
 }
 
-.works-item{
-width: 370px;
+.works-list-works__item{
+  width: 370px;
+  &:not(:last-child){ 
+    margin-right: 30px;
+  }
 }
-.works-item:not(:last-child){ 
-margin-right: 30px;
-}
+// .works-item:not(:last-child){ 
+//   margin-right: 30px;
+// }
