--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,33 +13,22 @@ align-items:baseline;
 flex-grow: 1;
 }
 
-.footer-logo{
-  @include font($fz:26px, $lh:1.19, $fw:700);
-  display: block;
-  margin-bottom: 20px;  
-  font-family: Raleway,sans-serif;
-// font-size: 26px;
-// font-weight: 700;
-// line-height: 1.19;
-// letter-spacing: 0.03em;
-  color: var(--accent-color);
+.header-logo_size_n{
+ margin-bottom: 20px;  
+ color: var(--accent-color);
 }
 
-  .footer-logo-link{
+.header-logo_color_anoth{
 
-color: var(--primary-white-color);
-}
+  color: var(--primary-white-color);
+ }
 .footer-list-footer__link-adress{
   @include font( $lh:1.7, $fw:400);
   color: var(--primary-white-color);
-  font-style: normal; 
-// font-size: 14px;
-// line-height: 1.7; 
-// font-style: normal; 
   transition:color 250ms var(--timing-function);
-  &:hover,
-  &:focus{
-  color: var(--accent-color);
+   &:hover,
+   &:focus{
+   color: var(--accent-color);
 }    
 }
 
@@ -55,15 +44,7 @@ color: rgba(255, 255, 255, 0.6);
 margin-bottom: 9px;
 }
 
-// .footer-list-footer__link:hover,
-// .footer-list-footer__link:focus{
-// color: var(--accent-color);
-// }    
 
-// .footer-list-footer__link-adress:hover,
-// .footer-list-footer__link-adress:focus{
-// color: var(--accent-color);
-// }    
 .footer-list-footer__link{
   transition: color 250ms var(--timing-function);
   &:hover,
@@ -71,9 +52,6 @@ margin-bottom: 9px;
    color: var(--accent-color);
 }    
 }
-
-
-
 .socials-footer{
 margin-left: 70px;
 
@@ -82,10 +60,6 @@ margin-left: 70px;
   @include font(); 
 text-transform:uppercase; 
 margin-bottom: 20px;
-// font-size: 14px;
-// font-weight: bold;
-// line-height: 1.14;
-// letter-spacing: 0.03em;
 text-align: left;
 color: var(--primary-white-color);
 
@@ -108,10 +82,7 @@ color: var(--primary-white-color);
 background-color: var(--accent-color);
 }
 }
-// .social-link:hover,
-// .social-link:focus{
-// background-color: var(--accent-color);
-// }
+
 .social-icon{
  fill: var(--primary-white-color);
 }
@@ -119,28 +90,23 @@ background-color: var(--accent-color);
 
 
 .footer-form{
-
-margin-left: 93px;
+  margin-left: 93px;
 }  
 
 
 .footer-deck input{
   @include font($fz:16px, $lh:1.25, $fw:400);
   display: inline-block;
-width: 358px;
-height: 50px;
-// font-size: 16px;
-// font-weight: 400;
-// line-height: 1.25;
-// letter-spacing: 0.03em;
-text-align: left;
-border-radius: 4px;
-box-sizing: border-box;
-margin-right: 12px;
-border: 1px solid rgba(255,255,255,0.3);
-background-color: #2F303A;
-padding: 15px;
-outline: none;
+  width: 358px;
+  height: 50px;
+  text-align: left;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-right: 12px;
+  border: 1px solid rgba(255,255,255,0.3);
+  background-color: #2F303A;
+  padding: 15px;
+  outline: none;
 
 }
 
@@ -162,10 +128,6 @@ border: none;
 display: inline-flex;
 justify-content: center;
 align-items:center;
-// font-size: 16px;
-// font-weight: 700;
-// line-height: 1.85;
-// letter-spacing: 0.06em;
 text-align: center;
 height: 50px;
 width: 200px;
